# zope.mytest

./: .gitignore  ISSUE_SUMMARY.md  MANIFEST.in  Makefile  PYLANCE_ISSUE.md  README.md  pyproject.toml  requirements.txt  setup.py  tests.py  verify_pylance_issue.py
src/zope/: __init__.py
src/zope/mytest/: __init__.py  my_file.py
