[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zope.mytest"
version = "1.0.0"
description = "A test package using zope.interface"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Wesley Barroso Lopes", email = "wesleybl@gmail.com"},
]
dependencies = [
    "zope.interface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/wesleybl/zope.mytest"
Repository = "https://github.com/wesleybl/zope.mytest.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"